--- a/blue-saucier/public/index.html
+++ b/blue-saucier/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+    <link href="//cdn.syncfusion.com/ej2/material.css" rel="stylesheet" type="text/css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,6 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BlueSaucier</title>
+    <script src="https://apis.google.com/js/api.js" type="text/javaScript"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
